force-app/main/default/objects/Student__c/fields/Average__c.field-meta.xml
<CustomField>
    <fullName>Average__c</fullName>
    <formula>(Subject1__c  +  Subject2__c  +  Subject3__c ) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>