force-app/main/default/objects/Student__c/fields/Subject2__c.field-meta.xml
<CustomField>
    <fullName>Subject2__c</fullName>
    <label>Subject2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>