force-app/main/default/objects/Student__c/fields/Subject3__c.field-meta.xml
<CustomField>
    <fullName>Subject3__c</fullName>
    <label>Subject3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>